fix:alignment

--- a/src/features/Cart/components/CartPage.scss
+++ b/src/features/Cart/components/CartPage.scss
@@ -147,6 +147,7 @@ li.subtotal:before {
     border-bottom: 1px solid #ccc;
     padding: 1rem 0;
     position: relative;
+    margin-left: 30px;
 }
 
 .product-image {
